# ultrathink

./: .gitignore  ARCHITECTURE_PLAN.md  README.md  claude.md  entities.json  kanban-columns.json  kb-server.py  kb-viewer.html  kb-viewer.js  pyproject.toml  topics.json
docs/: CLOUD_DEPLOYMENT_RESEARCH.md
files/: DEVELOPMENT_2025-11-24_18-06-21.md  README_2025-11-24_22-03-29.md  _2025-11-24_21-53-07.gitignore  brainstorm_2025-11-24_22-36-37.md  kb_2025-11-24_18-06-47.md  kb_2025-11-24_22-40-10.md  kb_2025-11-24_22-49-02.md  kb_2025-11-24_23-02-25.md  kb_2025-11-24_23-03-21.md  kb_2025-11-24_23-05-59.md  kb_2025-11-24_23-06-14.md
native-host/: com.ultrathink.kbsaver.json  host.bat  host.py  host.sh  install.bat  install.sh  uninstall.bat  uninstall.sh  widget.pyw  widget_state.json
packaging/: README.md  build-macos.sh  build-windows.bat  host.spec  widget.spec
ultrathink-extension/: background.js  logger.js  manifest.json  options.html  options.js  page-metadata.js  pinned-dialog.js  popup.html  popup.js  selection-overlay.js  shared-constants.js
